--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-fastapi==0.109.2
-uvicorn==0.27.1
-langchain-openai==0.0.5
-langchain==0.1.9
-requests==2.31.0
-beautifulsoup4==4.12.3
-python-multipart==0.0.9
-pydantic==2.6.1
+fastapi>=0.95.0,<0.110.0
+uvicorn>=0.15.0,<0.28.0
+langchain-openai>=0.0.2,<0.1.0
+langchain>=0.0.300,<0.2.0
+requests>=2.28.0,<3.0.0
+beautifulsoup4>=4.11.0,<4.13.0
+python-multipart>=0.0.5,<0.1.0
+pydantic>=2.0.0,<3.0.0
+typing-extensions>=4.5.0
+python-dotenv>=0.19.0
+aiohttp>=3.8.0
