--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
-fastapi>=0.95.0,<0.110.0
-uvicorn>=0.15.0,<0.28.0
-langchain-openai>=0.0.2,<0.1.0
-langchain>=0.0.300,<0.2.0
-requests>=2.28.0,<3.0.0
-beautifulsoup4>=4.11.0,<4.13.0
-python-multipart>=0.0.5,<0.1.0
-pydantic>=2.0.0,<3.0.0
-typing-extensions>=4.5.0
-python-dotenv>=0.19.0
-aiohttp>=3.8.0
+# Web Framework
+fastapi==0.95.2
+uvicorn==0.22.0
+
+# AI and Language Processing
+langchain==0.0.335
+langchain-openai==0.0.2
+openai==1.3.0
+
+# HTTP and Parsing
+requests==2.31.0
+beautifulsoup4==4.12.2
+python-multipart==0.0.6
+
+# Data Validation
+pydantic==1.10.12  # 使用1.x版本，避免需要Rust编译
+typing-extensions==4.7.1
+
+# Utilities
+python-dotenv==1.0.0
+aiohttp==3.8.5
