--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Web Framework
 fastapi==0.95.2
-uvicorn==0.22.0
+uvicorn[standard]==0.22.0
 
 # AI and Language Processing
 langchain==0.0.335
+openai==1.6.1
 langchain-openai==0.0.2
-openai==1.3.0
 
 # HTTP and Parsing
 requests==2.31.0
@@ -13,9 +13,9 @@ beautifulsoup4==4.12.2
 python-multipart==0.0.6
 
 # Data Validation
-pydantic==1.10.12  # 使用1.x版本，避免需要Rust编译
+pydantic==1.10.12
 typing-extensions==4.7.1
 
 # Utilities
 python-dotenv==1.0.0
-aiohttp==3.8.5
+aiohttp==3.8.6
