--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ uvicorn[standard]==0.22.0
 
 # AI and Language Processing
 langchain==0.0.335
-openai==1.6.1
 langchain-openai==0.0.2
+openai>=1.6.1,<2.0.0  # 确保与langchain-openai兼容
 
 # HTTP and Parsing
 requests==2.31.0
@@ -19,3 +19,9 @@ typing-extensions==4.7.1
 # Utilities
 python-dotenv==1.0.0
 aiohttp==3.8.6
+
+# Additional Dependencies
+tenacity>=8.1.0,<9.0.0
+charset-normalizer>=2.0.0,<4.0.0
+urllib3>=1.21.1,<3.0.0
+certifi>=2017.4.17
