--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Web Framework
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
-gunicorn==21.2.0  # 添加gunicorn用于生产环境部署
+gunicorn==21.2.0
 
 # AI and Language Processing
 langchain==0.0.335
@@ -19,6 +19,6 @@ typing-extensions==4.7.1
 
 # Utilities
 python-dotenv==1.0.0
-aiohttp==3.7.4
+aiohttp>=3.8.3,<4.0.0  # 更新版本以匹配langchain的要求
 httpx>=0.23.0,<1.0.0
 anyio>=3.5.0,<4.0.0
