--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
 # Web Framework
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
-gunicorn==21.2.0
+fastapi>=0.95.2,<1.0.0
+uvicorn[standard]>=0.22.0,<0.23.0
+gunicorn>=21.2.0,<22.0.0
 
 # AI and Language Processing
-langchain==0.0.335
-openai==1.6.1
-langchain-openai==0.0.2
+langchain>=0.0.335,<0.1.0
+openai>=1.6.1,<2.0.0
+langchain-openai>=0.0.2,<0.1.0
 
 # HTTP and Parsing
-requests==2.31.0
-beautifulsoup4==4.12.2
-python-multipart==0.0.6
+requests>=2.31.0,<3.0.0
+beautifulsoup4>=4.12.2,<4.13.0
+python-multipart>=0.0.6,<0.1.0
 
 # Data Validation
-pydantic==1.10.12
-typing-extensions==4.7.1
+pydantic>=2.3.0,<3.0.0
+typing-extensions>=4.7.1,<5.0.0
 
 # Utilities
-python-dotenv==1.0.0
-aiohttp>=3.8.3,<4.0.0  # 更新版本以匹配langchain的要求
+python-dotenv>=1.0.0,<2.0.0
+aiohttp>=3.8.3,<4.0.0
 httpx>=0.23.0,<1.0.0
 anyio>=3.5.0,<4.0.0
