Switch to Luma API client implementation

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # OpenAI API配置
 OPENAI_API_KEY=your_openai_api_key_here
 
+# Luma API配置
+LUMA_API_KEY=your_luma_api_key_here
+
 # 应用配置
 APP_ENV=development
 DEBUG=true
@@ -17,5 +20,5 @@ API_PORT=8000
 # CACHE_TTL=3600
 
 # 爬虫配置
-SCRAPER_REQUEST_TIMEOUT=30
+REQUEST_TIMEOUT=30
 MAX_RETRIES=3
